# bioinfo2

./: AminoSecondary.txt  CMakeLists.txt  Classificator.R  DSSP.cpp  DSSP.h  DSSPbonds.cpp  DSSPcreate.cpp  Data.h  Groups.cpp  Groups.h  H2O.hin  Main.R  Main.cpp  Predictor.cpp  Predictor.h  README.md  Ramachandran.cpp  Ramachandran.h  Regressor.R  Rscript.h  Space3D.cpp  Space3D.h  Splitter.R  Test.cpp  Test.hpp  createH2O.C  data.R  example.C  getSequence.C  plotList.csv  script.R  test.pbd  training.R
IC50/: ic1.txt  ic10.txt  ic2.txt  ic3.txt  ic4.txt  ic5.txt  ic6.txt  ic7.txt  ic8.txt  ic9.txt
R/: Main.R  data.R  script.R
R/data/: drug_response.txt  genes_small.txt
Tables/: table.csv
abgabe_woche1/: Classificator.R  Regressor.R  data.R
abgabe_woche1/data/: binary_data.txt  cancer_gene_list.txt  test_set.txt
annealing/: Annealing.cpp  Annealing.h  Water.h
ccp/: Amino.cpp  Amino.h  CCP.cpp  CCP.h  Occurrence.cpp  Occurrence.h  Probability.cpp  Probability.h  Scoring.cpp  Scoring.h
console/: Color.cpp  Color.h  console.cpp  console.h
data/: IC50_data.txt  cancer_gene_list.txt  drug_small.txt  gene_small2.txt  training_set.txt
documentation/: Documentation.md
drugs/: d1.txt  d10.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  d9.txt
matrix/: Matrix.h
output/Afatinib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Alpelisib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Camptothecin/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Linsitinib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Luminespib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/PD0325901/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/SCH772984/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Sapitinib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/Taselisib/:  error_file.txt   test_set_results.txt   training_set_results.txt
output/X5.Fluorouracil/:  error_file.txt   test_set_results.txt   training_set_results.txt
output_regressor/Afatinib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Alpelisib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Camptothecin/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Linsitinib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Luminespib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/PD0325901/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/SCH772984/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Sapitinib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/Taselisib/: error_file.txt  test_set_results.txt  training_set_results.txt
output_regressor/X5.Fluorouracil/: error_file.txt  test_set_results.txt  training_set_results.txt
rmsd/: RMSD.cpp  RMSD.h  Space.cpp  Space.h
tests/: Annealing_Test.cpp  CCP_Test.cpp  CMakeLists.txt  DSSP_Test.cpp  Predictor_Test.cpp  RMSD_Test.cpp  Ramachandran_Test.cpp  TestSuite1_tests.cpp
